# imagehash

./: .gitignore  .travis.yml  README.rst  conda-requirements.txt  find_similar_images.py  imagehash.py  pyproject.toml  setup.cfg  setup.py  test_whash.py
.github/workflows/: testing.yml  testing2.yml
imagehash/: __init__.py  videohash.py
imagehash/tests/: __init__.py  test_average_hash.py  test_dhash.py  test_phash.py  test_whash.py
tests/: test_aspect_phash.py  test_colorhash.py  test_whash.py
