[metadata]
name = ImageHash
version = 4.3.0
author = Johannes Buchner
author_email = buchner.johannes@gmx.at
license = BSD-2-Clause
description = Image Hashing library
url = https://github.com/JohannesBuchner/imagehash
long_description = file: README.rst
long_description_content_type = text/x-rst

[bdist_wheel]
universal = 1

[options]
packages = imagehash
install_requires = numpy; scipy; pillow; PyWavelets
scripts = find_similar_images.py
test_suite = tests
tests_require = pytest>=3

[options.package_data]
imagehash = py.typed

[flake8]
count = True
statistics = True
max-line-length = 127
max-complexity = 10
avoid-escape=True
; This ignore differs than autopep8's ignore as to not autofix tabs to spaces, but still warn when mixed
ignore=
	A001,			; variable "hash" is shadowing a python builtin
	W191,E111	; tabs are prefered indentation;
	E117			; Bug with pycodestyle for Python 2.7 where it thinks everything is over-indented with tabs
per-file-ignores=
	; False positive with multiline strings https://github.com/PyCQA/pycodestyle/issues/376
	find_similar_images.py: E101

